# ook

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  README.rst  docker-compose.yaml  noxfile.py  pyproject.toml  renovate.json  setup.cfg  square.env  tox.ini
.agents/skills/project-mechanics/: SKILL.md
.claude/: .gitignore  settings.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/stoker/: devcontainer.json
.github/: copilot-instructions.md
.github/prompts/: update-dependencies.prompt.md
.github/workflows/: ci.yaml  periodic-ci.yaml
.stoker/: settings.toml
alembic/: README.md  env.py  schema_dump.sql
alembic/versions/: 20250327_1655_82b60f520823_initial_schema.py  20250429_1919_7ea34679824b_add_author_and_glossary_terms_tables.py  20250620_1824_fb5ed49d63d5_change_table_names_from_plural_to_.py  20250707_1730_176f421b2597_add_affiliation_metadata.py  20250715_1730_113ced7d2d29_drop_collaboration_table.py  20250718_2048_1ad667eab84e_add_resource_tables.py  20250730_2010_c03d146610d8_add_pg_trgm_extension_and_search_vector_.py  20250805_1542_8e529b9177a0_add_address_country_code_column.py  20260610_1908_34ea7479b953_add_author_alias_table.py  20260706_1506_c1ddff6dff7a_add_linkcheck_tables.py  20260706_1800_97e2df2ad883_rename_linkcheck_ltd_columns_to_origin.py  20260707_2014_e3224f7fa2cb_add_origin_paths_to_linkcheck_check_url.py  20260708_1529_a62deab01a9b_drop_linkcheck_check_id_autoincrement.py  20260708_1600_cf936213314d_remint_resource_ids_time_ordered.py  20260708_2030_3b66bd60b53f_replace_dead_resource_relation_.py  20260708_2048_20144e072aa7_add_external_reference_url_index_and_.py  20260709_2115_c2a2c14c0e60_add_intersphinx_inventory_table.py  20260710_2034_818fdc36974d_add_consecutive_blocked_count_to_.py
changelog.d/: 20230719_100255_jsick_DM_39636.md  20230825_142158_jsick_DM_40505.md  20230905_125934_jsick_DM_40605.md  20230926_163220_jsick_DM_40847.md  20240129_141830_jsick_DM_42705.md  20240808_160528_jsick_DM_45676.md  20240822_185836_jsick_DM_45917.md  20250224_150147_jsick_DM_49120.md  20250314_143540_jsick_DM_49422.md  20250317_145510_jsick_DM_49491.md  20250404_151403_jsick_DM_49491.md  20250416_104431_jsick_DM_50016.md  20250421_154056_jsick_DM_50331.md  20250429_154815_jsick_DM_50331.md  20250430_143522_jsick_DM_50331.md  20250505_152854_jsick_fix_update.md  20250620_135823_jsick_DM_51484.md  20250707_153914_jsick_DM_51726.md  20250708_161455_jsick_DM_51726_nox_uv.md  20250711_110430_jsick_DM_51777.md  20250715_134217_jsick_DM_51816.md  20250729_110115_jsick_DM_51522.md  20250801_165924_jsick_DM_52027.md  20250805_160440_jsick_DM_52065_country_code.md  20250807_144929_jsick_DM_52065_address_format.md  20251028_113826_jsick_DM_53055.md  20260610_152115_jonathan_DM_55211.md  20260610_154500_jonathan_DM_55211_broker_shutdown.md  20260611_000000_python314.md  20260615_150032_jonathan_fastapi_0_137_routes.md  20260706_115248_jonathan_DM_55386.md  20260707_090000_jonathan_DM_55386_startup.md  20260708_120000_jonathan_DM_55386_idempotent.md  20260708_130000_jonathan_DM_55386_ssrf_pin.md  20260708_140000_jonathan_DM_55393_time_ordered_ids.md  20260708_150000_jonathan_DM_55393_ingest_idempotency.md  20260708_160000_jonathan_DM_55393_per_item_ingest.md  20260710_163451_jonathan_DM_55386_linkcheck_bot_blocks.md  20260723_120000_jonathan_DM_55387_intersphinx_cache.md  20260723_130000_jonathan_DM_55600_intersphinx_etag.md
docs/: _rst_epilog.rst  documenteer.toml  index.rst
docs/dev/: development.rst  release.rst
docs/user-guide/: configuration-reference.rst
manifests/base/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
planning/: bibliography-api.md
requirements/: dev.in  dev.txt  main.in  main.txt
scripts/: install-base-packages.sh  start-service.sh
src/ook/: __init__.py  app.py  classification.py  cli.py  config.py  database.py  exceptions.py  factory.py  github.py  kafkarouter.py  main.py  utils.py
src/ook/avro_schemas/: ook.ltd_url_ingest_v1.json  ook.url_key_v1.json
src/ook/dbschema/: __init__.py  authors.py  base.py  glossary.py  intersphinx.py  linkcheck.py  links.py  resources.py  sdmschemas.py  sdmschemaslinks.py
src/ook/dependencies/: algoliasearch.py  consumercontext.py  context.py
src/ook/domain/: algoliarecord.py  authors.py  base32id.py  glossary.py  intersphinx.py  kafka.py  latex.py  links.py  ltdlander.py  ltdsphinxtechnote.py  ltdtechnote.py  sdmschemas.py  sphinxutils.py  utils.py
src/ook/events/: editionupdated.py  router.py
src/ook/handlers/: __init__.py  kafka.py
src/ook/services/: algoliaaudit.py  algoliadocindex.py  authors.py  classification.py  factory.py  glossary.py  intersphinx.py  kafkaproducer.py  landerjsonldingest.py  links.py  ltdmetadataservice.py  resources.py  slack.py  sphinxtechnoteingest.py  technoteingest.py
src/ook/storage/: __init__.py  _author_queries.py  authorstore.py  glossarystore.py  intersphinxstore.py  linkstore.py  lssttexmf.py  sdmschemaslinkstore.py  sdmschemastore.py
tests/: algolia_async.py  classification_test.py  config_test.py  conftest.py  dbschema_test.py  test_github.py
tests/cli/: linkcheck_recheck_test.py  migrate_country_codes_test.py  refresh_intersphinx_test.py
tests/domain/: base32id_test.py  ltdlander_test.py  ltdtechnote_test.py  test_kafka.py
tests/events/: editionupdated_test.py  ingest_ltd_sphinx_technote_test.py
tests/migrations/: __init__.py  remint_resource_ids_test.py
tests/services/: author_service_delete_test.py  author_service_migrate_test.py  classification_test.py  githubmetadata_test.py
tests/storage/: author_store_migrate_test.py  github_test.py  lssttexmf_test.py
tests/support/: __init__.py  algoliasearch.py  github.py  kafkaproducer.py  schemamanager.py
(+181 files in other folders)
